@@ -1,3 +1,9 @@
+1.X
+-------------------------------
+
+- show response when uploading documentation failed
+
+
 1.1
 -------------------------------
 
